--- a/src/components/Profile/Myposts/post/Post.module.css
+++ b/src/components/Profile/Myposts/post/Post.module.css
@@ -1,11 +1,13 @@
 
 
 .item{
+    display: flex;
     color: white;
+    margin-bottom: 15px;
+    flex-direction: column;
 }
-.item img{
-    width: 50px;
-    height: 50px;
-    border-radius: 30px;
+.span {
+
 }
+
 
