--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .app-wrapper {
     margin: 0 auto;
-  display: grid;
+    display: grid;
     width: 1200px;
-  grid-template-areas:
+    grid-template-areas:
   "h h"
   "n c";
 
@@ -10,9 +10,11 @@
     grid-template-columns: 2fr 10fr;
 
 }
+
 .app-wrapper-content {
-  grid-area: c;
-  background-color: cornflowerblue;
+    grid-area: c;
+    background-color: #141414;
+
 
 
 }
