--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,8 @@
 .header {
     grid-area: h;
-    background-color: green;
+    background-color: #292929;
 }
 .header img{
     width: 60px;
+    border-radius: 15px;
 }
