--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,15 +1,54 @@
-.nav {
-    grid-area: n;
-    background-color:#141414	;
-    padding: 40px;
+
+
+
+.container{
+    position: relative;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    background-color: #fff;
+}
+.ul {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    border-radius: 0 0 8px 8px;
+    border-bottom: 3px solid #d8e1ef;
+    padding-left: 0;
+}
+.li{
+    width: 100%;
+    display: inline-block;
+    position: relative;
+    text-align: center;
+    border-right: 1px solid #e4e9f1;
+    margin-right: 0;
+    margin-bottom: 15px;
+}
+.a{
+    font-weight: 500;
+    color: #646464;
+    font-size: 13px;
+    padding: 15px 10px;
+    transition: all .3s ease 0s;
+    text-decoration: none;
+    width: 100%;
+    position: relative;
 
 }
-.item a{
-    font-size: 20px;
-    color: white;
-    text-decoration: none;
-    padding-bottom: 15px;
+.a:hover{
+
+    color: #000;
 }
-.item a.active{
-    color: gold;
+.ul::after {
+    border-radius: 0 0 0 8px;
+    visibility: visible;
+    opacity: 1;
+    content: "";
+    height: 5px;
+    width: 100%;
+    background-color: #2d5be3;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -2px;
 }
