--- a/src/components/Profile/Myposts/post/Post.module.css
+++ b/src/components/Profile/Myposts/post/Post.module.css
@@ -1,15 +1,14 @@
 
-
-.item{
+.cont{
+    margin-bottom: 20px;
+}
+.name{
     display: flex;
-    color: #cccccc;
-    margin-bottom: 15px;
-    flex-direction: column;
-    background-color: #656565;
-    border-radius: 5px;
+    align-items: center;
 }
 .span {
-
+    display: flex;
+    flex-direction: column;
 }
 
 
