--- a/src/components/Profile/Myposts/Mypost.module.css
+++ b/src/components/Profile/Myposts/Mypost.module.css
@@ -7,7 +7,8 @@
     margin-bottom: 15px;
 }
 .post {
-    color: #f5f5f5;
-    text-align: right;
+    color: black;
+    text-align: center;
     padding-right: 20px;
+    font-size: 25px;
 }
