--- a/src/components/Profile/ProfileInfo/Profileinfo.module.css
+++ b/src/components/Profile/ProfileInfo/Profileinfo.module.css
@@ -22,6 +22,18 @@
     bottom: 0;
     z-index: -1;
 }
+.input{
+   visibility: hidden;
+    opacity: 0;
+    position: absolute;
+}
+.icon {
+    position: absolute;
+    top: 90px;
+    right: 0;
+    z-index: 200;
+    cursor: pointer;
+}
 .avatar{
     position: absolute;
     border-radius: 50%;
